make component button

--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
               </li>
             </ul>
             <form class="d-flex" role="search">
-              <button class="btn btn-outline-success" type="submit">
+              <button class="btn btn-rounded-primary" type="submit">
                 ورود به اکانت
               </button>
             </form>
