complete Intro Section

--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
     ></script>
   </head>
   <body>
+    <!-- Header  -->
     <header>
       <nav class="navbar navbar-expand-lg navbar-dark menu shadow fixed-top">
         <div class="container">
@@ -64,14 +65,37 @@
                 <a class="nav-link">درباره ما</a>
               </li>
             </ul>
-            <form class="d-flex" role="search">
-              <button class="btn btn-rounded-primary" type="submit">
-                ورود به اکانت
-              </button>
-            </form>
+            <button class="btn btn-rounded-primary me-3" type="submit">
+              ورود به اکانت
+            </button>
           </div>
         </div>
       </nav>
     </header>
+    <!-- Intro  -->
+    <section class="intro ">
+      <div class="container ">
+        <div class="row my-5 gy-5 align-items-center text-white">
+          <div class="col-lg-6">
+            <h3 class="fw-bold fs-3">لورم ایپسوم متن ساختگی</h3>
+            <p class="my-4">
+              لورم ایپسوم متن ساختگی و چرت و پرت های دیگر که ساخته ی ذهن مریض
+              سازنده ی سایت است
+          </p>
+          <button class="btn btn-rounded-primary">لورم ایپسوم</button>
+          </div>
+          <div class="col-lg-6 text-start">
+            <img class="img-fluid" src="./images/intro/1.png" alt="man picture" />
+          </div>
+        </div>
+      </div>
+      <div style="height: 150px; overflow: hidden;">
+        <svg viewBox="0 0 500 150" preserveAspectRatio="none" style="height: 100%; width: 100%;">
+            <path d="M0.00,49.99 C150.00,150.00 349.20,-49.99 500.00,49.99 L500.00,150.00 L0.00,150.00 Z"
+                style="stroke: none; fill: #fff;">
+            </path>
+        </svg>
+    </div>
+    </section>
   </body>
 </html>
