complete first part of services

--- a/index.html
+++ b/index.html
@@ -73,29 +73,67 @@
       </nav>
     </header>
     <!-- Intro  -->
-    <section class="intro ">
-      <div class="container ">
+    <section class="intro">
+      <div class="container">
         <div class="row my-5 gy-5 align-items-center text-white">
           <div class="col-lg-6">
             <h3 class="fw-bold fs-3">لورم ایپسوم متن ساختگی</h3>
             <p class="my-4">
               لورم ایپسوم متن ساختگی و چرت و پرت های دیگر که ساخته ی ذهن مریض
               سازنده ی سایت است
-          </p>
-          <button class="btn btn-rounded-primary">لورم ایپسوم</button>
+            </p>
+            <button class="btn btn-rounded-primary">لورم ایپسوم</button>
           </div>
           <div class="col-lg-6 text-start">
-            <img class="img-fluid" src="./images/intro/1.png" alt="man picture" />
+            <img
+              class="img-fluid"
+              src="./images/intro/1.png"
+              alt="man picture"
+            />
           </div>
         </div>
       </div>
-      <div style="height: 150px; overflow: hidden;">
-        <svg viewBox="0 0 500 150" preserveAspectRatio="none" style="height: 100%; width: 100%;">
-            <path d="M0.00,49.99 C150.00,150.00 349.20,-49.99 500.00,49.99 L500.00,150.00 L0.00,150.00 Z"
-                style="stroke: none; fill: #fff;">
-            </path>
+      <div style="height: 150px; overflow: hidden">
+        <svg
+          viewBox="0 0 500 150"
+          preserveAspectRatio="none"
+          style="height: 100%; width: 100%"
+        >
+          <path
+            d="M0.00,49.99 C150.00,150.00 349.20,-49.99 500.00,49.99 L500.00,150.00 L0.00,150.00 Z"
+            style="stroke: none; fill: #fff"
+          ></path>
         </svg>
-    </div>
+      </div>
+    </section>
+    <!-- Services  -->
+    <section class="services">
+      <div class="container">
+        <div class="row">
+          <div class="col-12">
+            <h2 class="fw-bold fs-3 text-center">لورم ایپسوم متن ساختگی</h2>
+            <div class="heading-line"></div>
+          </div>
+        </div>
+
+        <!-- first Part -->
+        <div class="row align-items-center my-5">
+          <div class="col-md-6 border-start p-4">
+            <h5 class="fw-bold lh-lg text-center">
+              لورم ایپسوم متن ساختگی با تولید سادگی نامفهوم از صنعت چاپ و با
+              استفاده از طراحان گرافیک است.
+            </h5>
+          </div>
+          <div class="col-md-6 p-4">
+            <p class="lh-lg text-center text-md-end">
+              لورم ایپسوم متن ساختگی با تولید سادگی نامفهوم از صنعت چاپ و با
+              استفاده از طراحان گرافیک است. لورم ایپسوم متن ساختگی با تولید
+              سادگی نامفهوم از صنعت چاپ و با استفاده از طراحان گرافیک است.
+            </p>
+          </div>
+        </div>
+        <!-- second Part -->
+      </div>
     </section>
   </body>
 </html>
