--- a/index.html
+++ b/index.html
@@ -5,6 +5,10 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>AliMoradpour.com</title>
+    <link
+      rel="stylesheet"
+      href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.8.3/font/bootstrap-icons.css"
+    />
     <link rel="stylesheet" href="./assets/css/main.css" />
     <script
       src="./node_modules/bootstrap/dist/js/bootstrap.bundle.min.js"
@@ -87,7 +91,7 @@
           <div class="col-lg-6 text-start">
             <img
               class="img-fluid"
-              src="./images/intro/1.png"
+              src="./assets/images/intro/1.png"
               alt="man picture"
             />
           </div>
@@ -108,6 +112,7 @@
     </section>
     <!-- Services  -->
     <section class="services">
+      <!-- first Part -->
       <div class="container">
         <div class="row">
           <div class="col-12">
@@ -116,7 +121,6 @@
           </div>
         </div>
 
-        <!-- first Part -->
         <div class="row align-items-center my-5">
           <div class="col-md-6 border-start p-4">
             <h5 class="fw-bold lh-lg text-center">
@@ -132,8 +136,84 @@
             </p>
           </div>
         </div>
-        <!-- second Part -->
+      </div>
+      <!-- second Part -->
+      <div class="container">
+        <div class="row gy-5 align-items-center mt-5">
+          <div class="col-lg-6 text-center text-md-end">
+            <i class="icon bi bi-stack"></i>
+            <h3 class="fw-bold text-primary">لورم ایپسوم متن ساختگی</h3>
+            <p class="lh-lg my-3">
+              لورم ایپسوم متن ساختگی با تولید سادگی نامفهوم از صنعت چاپ و با
+              استفاده از طراحان گرافیک است. لورم ایپسوم متن ساختگی با تولید
+              سادگی نامفهوم از صنعت چاپ و با استفاده از طراحان گرافیک است.
+            </p>
+            <button class="btn btn-rounded-primary border-primary">مطالعه بیشتر</button>
+          </div>
+          <div class="col-lg-6 text-start">
+            <img
+              class="img-fluid"
+              src="./assets/images/services/1.png"
+              alt="image"
+            />
+          </div>
+        </div>
+
+        <div class="row gy-5 align-items-center mt-5">
+          <div class="col-lg-6 text-end order-2 order-md-1 text-center text-md-end">
+            <img
+              class="img-fluid"
+              src="./assets/images/services/2.png"
+              alt="image"
+            />
+          </div>
+          <div class="col-lg-6 order-1 order-md-2">
+            <i class="icon bi bi-menu-button-wide-fill"></i>
+            <h3 class="fw-bold text-primary">لورم ایپسوم متن ساختگی</h3>
+            <p class="lh-lg my-3">
+              لورم ایپسوم متن ساختگی با تولید سادگی نامفهوم از صنعت چاپ و با
+              استفاده از طراحان گرافیک است. لورم ایپسوم متن ساختگی با تولید
+              سادگی نامفهوم از صنعت چاپ و با استفاده از طراحان گرافیک است.
+            </p>
+            <button class="btn btn-rounded-primary border-primary">مطالعه بیشتر</button>
+          </div>
+        </div>
+
+        <div class="row gy-5 align-items-center mt-5">
+          <div class="col-lg-6 text-center text-md-end">
+            <i class="icon bi bi-bar-chart-line-fill"></i>
+            <h3 class="fw-bold text-primary">لورم ایپسوم متن ساختگی</h3>
+            <p class="lh-lg my-3">
+              لورم ایپسوم متن ساختگی با تولید سادگی نامفهوم از صنعت چاپ و با
+              استفاده از طراحان گرافیک است. لورم ایپسوم متن ساختگی با تولید
+              سادگی نامفهوم از صنعت چاپ و با استفاده از طراحان گرافیک است.
+            </p>
+            <button class="btn btn-rounded-primary border-primary">مطالعه بیشتر</button>
+          </div>
+          <div class="col-lg-6 text-start">
+            <img
+              class="img-fluid"
+              src="./assets/images/services/3.png"
+              alt="image"
+            />
+          </div>
+        </div>
+
+        
       </div>
     </section>
+
+    
+    <br />
+    <br />
+    <br />
+    <br />
+    <br />
+    <br />
+    <br />
+    <br />
+    <br />
+    <br />
+    <br />
   </body>
 </html>
