--- a/index.html
+++ b/index.html
@@ -203,7 +203,116 @@
       </div>
     </section>
 
-    
+    <!-- Comments  -->
+    <section class="comments">
+      <!-- Top wave  -->
+      <div style="height: 150px; overflow: hidden;">
+          <svg viewBox="0 0 500 150" preserveAspectRatio="none" style="height: 100%; width: 100%;">
+              <path d="M0.00,49.99 C150.00,150.00 271.49,-49.99 500.00,49.99 L500.00,0.00 L0.00,0.00 Z"
+                  style="stroke: none; fill: #fff;">
+              </path>
+          </svg>
+      </div>
+      <div class="container">
+          <div class="row text-white text-center">
+              <h1 class="fs-3 fw-bold">لورم ایپسوم متن ساختگی</h1>
+              <hr class="mx-auto" style="width: 100px; height: 3px;">
+              <p class="lead pt-1">لورم ایپسوم متن ساختگی با تولید سادگی نامفهوم از صنعت چاپ</p>
+          </div>
+          <!-- carousel  -->
+          <div class="row">
+              <div id="carouselExampleControls" class="carousel slide" data-bs-ride="carousel">
+                  <div class="carousel-inner">
+                      <div class="carousel-item active">
+                          <div class="carousel-card rounded text-center p-4">
+                              <img width="120" class="img-fluid rounded-circle" src="./assets/images/comments/1.jpg"
+                                  alt="">
+                              <div class="mt-3">
+                                  <h4 class="fw-bold">لورم ایپسوم</h4>
+                                  <p>لورم ایپسوم</p>
+                              </div>
+                              <p class="lh-lg">
+                                  لورم ایپسوم متن ساختگی با تولید سادگی نامفهوم از صنعت چاپ و با استفاده از طراحان
+                                  گرافیک است.
+                                  لورم ایپسوم متن ساختگی با تولید سادگی نامفهوم از صنعت چاپ و با استفاده از طراحان
+                                  گرافیک است.
+                                  لورم ایپسوم متن ساختگی با تولید سادگی نامفهوم از صنعت چاپ و با استفاده از طراحان
+                                  گرافیک است.
+                              </p>
+                          </div>
+                      </div>
+
+                      <div class="carousel-item">
+                          <div class="carousel-card rounded text-center p-4">
+                              <img width="120" class="img-fluid rounded-circle" src="./assets/images/comments/2.jpg"
+                                  alt="">
+                              <div class="mt-3">
+                                  <h4 class="fw-bold">لورم ایپسوم</h4>
+                                  <p>لورم ایپسوم</p>
+                              </div>
+                              <p class="lh-lg">
+                                  لورم ایپسوم متن ساختگی با تولید سادگی نامفهوم از صنعت چاپ و با استفاده از طراحان
+                                  گرافیک است.
+                                  لورم ایپسوم متن ساختگی با تولید سادگی نامفهوم از صنعت چاپ و با استفاده از طراحان
+                                  گرافیک است.
+                                  لورم ایپسوم متن ساختگی با تولید سادگی نامفهوم از صنعت چاپ و با استفاده از طراحان
+                                  گرافیک است.
+                              </p>
+                          </div>
+                      </div>
+
+                      <div class="carousel-item">
+                          <div class="carousel-card rounded text-center p-4">
+                              <img width="120" class="img-fluid rounded-circle" src="./assets/images/comments/3.jpg"
+                                  alt="">
+                              <div class="mt-3">
+                                  <h4 class="fw-bold">لورم ایپسوم</h4>
+                                  <p>لورم ایپسوم</p>
+                              </div>
+                              <p class="lh-lg">
+                                  لورم ایپسوم متن ساختگی با تولید سادگی نامفهوم از صنعت چاپ و با استفاده از طراحان
+                                  گرافیک است.
+                                  لورم ایپسوم متن ساختگی با تولید سادگی نامفهوم از صنعت چاپ و با استفاده از طراحان
+                                  گرافیک است.
+                                  لورم ایپسوم متن ساختگی با تولید سادگی نامفهوم از صنعت چاپ و با استفاده از طراحان
+                                  گرافیک است.
+                              </p>
+                          </div>
+                      </div>
+                  </div>
+                  <div class="carousel-buttons text-center mt-4">
+                      <button class="btn btn-outline-light" type="button" data-bs-target="#carouselExampleControls"
+                          data-bs-slide="prev">
+                          <i class="bi bi-arrow-right"></i>
+                      </button>
+                      <button class="btn btn-outline-light me-2" type="button" data-bs-target="#carouselExampleControls"
+                          data-bs-slide="next">
+                          <i class="bi bi-arrow-left"></i>
+                      </button>
+                  </div>
+              </div>
+          </div>
+      </div>
+      <!-- Buttom wave  -->
+      <div style="height: 150px; overflow: hidden;">
+          <svg viewBox="0 0 500 150" preserveAspectRatio="none" style="height: 100%; width: 100%;">
+              <path d="M0.00,49.99 C150.00,150.00 349.20,-49.99 500.00,49.99 L500.00,150.00 L0.00,150.00 Z"
+                  style="stroke: none; fill: #fff;">
+              </path>
+          </svg>
+      </div>
+  </section>
+
+  <!-- FAQ -->
+  <section>
+    <div class="container">
+      <div class="row">
+        <div class="col-12">
+          <h2 class="fw-bold fs-3 text-center">لورم ایپسوم متن ساختگی</h2>
+          <div class="heading-line"></div>
+        </div>
+      </div>
+  </section>
     <br />
     <br />
     <br />
