--- a/index.html
+++ b/index.html
@@ -160,14 +160,14 @@
         </div>
 
         <div class="row gy-5 align-items-center mt-5">
-          <div class="col-lg-6 text-end order-2 order-md-1 text-center text-md-end">
+          <div class="col-lg-6 text-end order-2 order-m=lg-1 text-center text-md-end">
             <img
               class="img-fluid"
               src="./assets/images/services/2.png"
               alt="image"
             />
           </div>
-          <div class="col-lg-6 order-1 order-md-2">
+          <div class="col-lg-6 order-1 order-lg-2">
             <i class="icon bi bi-menu-button-wide-fill"></i>
             <h3 class="fw-bold text-primary">لورم ایپسوم متن ساختگی</h3>
             <p class="lh-lg my-3">
@@ -409,16 +409,105 @@
 </section>
 
 <!-- Footer  -->
+<footer class="footer bg-black text-white">
+  <div class="container py-4">
+      <div class="row gy-4">
+          <div class="col-md-4">
+              <div class="d-flex align-items-center justify-content-start justify-content-md-center">
+                  <i class="bi bi-telephone-fill text-primary fs-1 ms-3"></i>
+                  <div>
+                      <span> 09179000000 </span>
+                      <p class="mb-0">شنبه تا پنج شنبه، 8 صبح تا 4 بعدظهر</p>
+                  </div>
+              </div>
+          </div>
+          <div class="col-md-4">
+              <div class="d-flex align-items-center justify-content-start justify-content-md-center">
+                  <i class="bi bi-envelope-fill text-primary fs-1 ms-3"></i>
+                  <div>
+                      <span> info@company.com </span>
+                      <p class="mb-0">پشتیبانی آنلاین </p>
+                  </div>
+              </div>
+          </div>
+          <div class="col-md-4">
+              <div class="d-flex align-items-center justify-content-start justify-content-md-center">
+                  <i class="bi bi-map-fill text-primary fs-1 ms-3"></i>
+                  <div>
+                      <span> لورم ایپسوم </span>
+                      <p class="mb-0">لورم ایپسوم متن ساختگی </p>
+                  </div>
+              </div>
+          </div>
+      </div>
+  </div>
+  <div class="social-links">
+      <div class="container py-4">
+          <div class="row gy-4 align-items-center text-center">
+              <div class="col-md-6">
+                  <p class="mb-0">لورم ایپسوم متن ساختگی با تولید سادگی نامفهوم</p>
+              </div>
+              <div class="col-md-6">
+                  <a href="#"><i class="fs-3 ms-2 text-white bi bi-facebook"></i></a>
+                  <a href="#"><i class="fs-3 ms-2 text-white bi bi-twitter"></i></a>
+                  <a href="#"><i class="fs-3 ms-2 text-white bi bi-github"></i></a>
+                  <a href="#"><i class="fs-3 ms-2 text-white bi bi-linkedin"></i></a>
+                  <a href="#"><i class="fs-3 text-white bi bi-instagram"></i></a>
+              </div>
+          </div>
+      </div>
+  </div>
+  <div class="footer-links container py-4 mt-4">
+      <div class="row gy-4">
+          <div class="col-12 col-lg-5 offset-lg-1">
+              <h5 class="fw-bold">AliMoradpour.com</h5>
+              <hr>
+              <p class="lh-lg mb-0">لورم ایپسوم متن ساختگی با تولید سادگی نامفهوم از صنعت چاپ و با استفاده از طراحان گرافیک است.</p>
+          </div>
+          <div class="col-6 col-lg-2">
+              <h5 class="fw-bold">محصولات</h5>
+              <hr>
+              <ul class="list-unstyled p-0">
+                  <li class="mt-2"><a href="#"></a>لورم ایپسوم</li>
+                  <li class="mt-2"><a href="#"></a>لورم ایپسوم</li>
+                  <li class="mt-2"><a href="#"></a>لورم ایپسوم</li>
+                  <li class="mt-2"><a href="#"></a>لورم ایپسوم</li>
+              </ul>
+          </div>
+          <div class="col-6 col-lg-2">
+              <h5 class="fw-bold">خدمات</h5>
+              <hr>
+              <ul class="list-unstyled p-0">
+                  <li class="mt-2"><a href="#"></a>لورم ایپسوم</li>
+                  <li class="mt-2"><a href="#"></a>لورم ایپسوم</li>
+                  <li class="mt-2"><a href="#"></a>لورم ایپسوم</li>
+              </ul>
+          </div>
+          <div class="col-6 col-lg-2">
+              <h5 class="fw-bold">تماس با ما</h5>
+              <hr>
+              <ul class="list-unstyled p-0">
+                  <li class="mt-2"><a href="#"></a>لورم ایپسوم</li>
+                  <li class="mt-2"><a href="#"></a>لورم ایپسوم</li>
+              </ul>
+          </div>
+      </div>
+  </div>
+  <div class="copyright-info">
+      <div class="container py-3">
+          <div class="row text-center">
+              <div class="col-12">
+                  <h5 class="fw-bold">AliMoradpour.com</h5>
+                  <p class="mb-0">وب پروگ، آکادمی آموزش آنلاین تخصصی برنامه نویسی</p>
+              </div>
+          </div>
+      </div>
+  </div>
 
-
-
-
-
-
-
-
-
-
+  <a href="#" class="shadow btn-primary rounded-circle d-flex justify-content-center align-items-center back-to-top">
+      <i class="bi bi-chevron-up"></i>
+  </a>
+</footer>
 <!-- Scripts  -->
 <script defer src="https://unpkg.com/alpinejs@3.3.4/dist/cdn.min.js"></script>
 <script>
