--- a/index.html
+++ b/index.html
@@ -416,7 +416,7 @@
               <div class="d-flex align-items-center justify-content-start justify-content-md-center">
                   <i class="bi bi-telephone-fill text-primary fs-1 ms-3"></i>
                   <div>
-                      <span> 09179000000 </span>
+                      <span> 09125052100 </span>
                       <p class="mb-0">شنبه تا پنج شنبه، 8 صبح تا 4 بعدظهر</p>
                   </div>
               </div>
@@ -498,7 +498,7 @@
           <div class="row text-center">
               <div class="col-12">
                   <h5 class="fw-bold">AliMoradpour.com</h5>
-                  <p class="mb-0">وب پروگ، آکادمی آموزش آنلاین تخصصی برنامه نویسی</p>
+                  <p class="mb-0">لورم ایپسوم متن ساختگی و سایر چیز های دیگه .... :)</p>
               </div>
           </div>
       </div>
